[package]
name = "server"
version = "0.1.0"
edition = "2021"
publish = false
authors = ['Neopentene - Celestyn']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "^0.14.0"
chrono = "0.4.23"
dotenv = "^0.15.0"
jsonwebtoken = "^8.2.0"
mongodb = { version = "^2.4.0", features = ["sync"], default-features = false }
rand = "^0.8.5"
ring = "^0.16.20"
rocket = { version = "^0.5.0-rc.3", features = ["json"] }
serde = "^1.0.154"
